[project]
name = "banner_s00zzang"
version = "0.2.0"
description = "Default template for PDM package"
authors = [
    {name = "S00zzang", email = "sujinpark8719561@gmail.com"},
]
dependencies = [
    "pyfiglet>=1.0.2",
]
requires-python = ">=3.8"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = true
